--- a/src/Presentation/Views/Accounts/Accounts.cshtml
+++ b/src/Presentation/Views/Accounts/Accounts.cshtml
@@ -3,6 +3,19 @@
 @{
     ViewData["Title"] = "Accounts";
     Layout = "_ServerSideCardTableLayout";
+
+    var breadcrumbItems = new List<BreadcrumbItem>
+    {
+        new()
+        {
+            Label = "Accounts",
+            Url = "/Accounts"
+        }
+    };
+}
+
+@section Breadcrumb {
+    @await Html.PartialAsync("_BreadcrumbPartial", breadcrumbItems)
 }
 
 @section Paging {
