--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -3,8 +3,20 @@
 @{
     ViewData["Title"] = "Genres";
     Layout = "_ServerSideCardTableLayout";
+
+    var breadcrumbItems = new List<BreadcrumbItem>
+    {
+        new()
+        {
+            Label = "Genres",
+            Url = "/Genres"
+        },
+    };
 }
 
+@section Breadcrumb {
+    @await Html.PartialAsync("_BreadcrumbPartial", breadcrumbItems)
+}
 
 @section Paging {
     @await Html.PartialAsync("_PagingPartial", Model.MetaData)
@@ -13,7 +25,7 @@
 @section Cards {
     @foreach (var genre in Model)
     {
-        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-name="@genre.Name" data-active="@(!genre.DeletedDate.HasValue)" href="/Books/Genres/@genre.Id" style="text-decoration:none; color:black">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" href="/Genres/@genre.Id" style="text-decoration:none; color:black">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@genre.Name</span>
@@ -49,7 +61,7 @@
         <tbody>
             @foreach (var genre in Model)
             {
-                <tr class="table-row" data-name="@genre.Name" data-active="@(!genre.DeletedDate.HasValue)">
+                <tr class="table-row">
                     <td>@genre.Name</td>
                     <td class="table-description">@genre.Description</td>
                     <td>
@@ -63,7 +75,7 @@
                         }
                     </td>
                     <td class="no-wrap">
-                        <a href="/Books/Genres/@genre.Id" class="btn btn-info btn-sm">View Details</a>
+                        <a href="/Genres/@genre.Id" class="btn btn-info btn-sm">View Details</a>
                     </td>
                 </tr>
             }
@@ -72,7 +84,7 @@
 }
 
 @section Fab {
-    <a href="/Books/Genres/AddGenre" class="btn btn-primary btn-lg shadow-sm myfab">
+    <a href="/Genres/AddGenre" class="btn btn-primary btn-lg shadow-sm myfab">
         Add Genre
     </a>
 }
