--- a/src/Presentation/Views/Accounts/AddAccount.cshtml
+++ b/src/Presentation/Views/Accounts/AddAccount.cshtml
@@ -3,7 +3,26 @@
 @{
     Layout = "_DetailLayout";
     ViewData["Title"] = "Add Account";
+
+    var breadcrumbItems = new List<BreadcrumbItem>
+    {
+        new()
+        {
+            Label = "Accounts",
+            Url = "/Accounts"
+        },
+        new()
+        {
+            Label = "Add",
+            Url = "/Accounts/AddAccount"
+        }
+    };
 }
+
+@section Breadcrumb {
+    @await Html.PartialAsync("_BreadcrumbPartial", breadcrumbItems)
+}
+
 
 <form asp-action="AddAccount" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
