--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -5,6 +5,24 @@
     ViewData["Title"] = Model.Title;
     var userAction = Model.DeletedDate == null ? "Delete" : "Renew";
     var actionButtonClass = Model.DeletedDate == null ? "btn-danger" : "btn-warning";
+
+    var breadcrumbItems = new List<BreadcrumbItem>
+    {
+        new()
+        {
+            Label = "Books",
+            Url = "/Books"
+        },
+        new()
+        {
+            Label = Model.Id.ToString(),
+            Url = $"/Books/{Model.Id}"
+        }
+    };
+}
+
+@section Breadcrumb {
+    @await Html.PartialAsync("_BreadcrumbPartial", breadcrumbItems)
 }
 
 <form asp-route="Books/" method="post" class="needs-validation" novalidate>
