--- a/src/Presentation/Views/Publishers/AddPublisher.cshtml
+++ b/src/Presentation/Views/Publishers/AddPublisher.cshtml
@@ -3,7 +3,26 @@
 @{
     Layout = "_DetailLayout";
     ViewData["Title"] = "Add Publisher";
+
+    var breadcrumbItems = new List<BreadcrumbItem>
+    {
+        new()
+        {
+            Label = "Publishers",
+            Url = "/Publishers"
+        },
+        new()
+        {
+            Label = "Add",
+            Url = "/Publishers/AddPublisher"
+        }
+    };
 }
+
+@section Breadcrumb {
+    @await Html.PartialAsync("_BreadcrumbPartial", breadcrumbItems)
+}
+
 
 <form asp-action="AddPublisher" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
