added animation for navigation bar dropdowns

--- a/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
+++ b/src/Presentation/Views/Shared/Components/Navigation/Default.cshtml
@@ -18,7 +18,7 @@
                         <a class='nav-link dropdown-toggle' href='{item.Route}' role='button' aria-expanded='false'>
                     {item.Name}
                         </a>
-                        <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end'>
+                        <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end animate slideIn'>
                 {RenderSubMenu(item.ChildNavigationMenuItems)}
                         </ul>
                     </li>");
@@ -47,7 +47,7 @@
                         <a class='dropdown-item dropdown-toggle' href='{item.Route}'>
                     {item.Name}
                         </a>
-                        <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end'>
+                        <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end animate slideIn'>
                 {RenderSubMenu(item.ChildNavigationMenuItems)}
                         </ul>
                     </li>");
