--- a/src/Presentation/Views/Checkouts/AddCheckout.cshtml
+++ b/src/Presentation/Views/Checkouts/AddCheckout.cshtml
@@ -28,7 +28,7 @@
     <div class="row justify-content-center">
         <div class="col-xl-8">
             <div class="card mb-4">
-                <h5 class="card-header">Add Book Edition</h5>
+                <h5 class="card-header">Add Checkout</h5>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-4 mb-3">
