--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -144,7 +144,8 @@
 
 
     <script src="~/js/Shared/ActionModal.js"></script>
-    <script src="~/js/Books/Book.js"></script>
+
+    <script src="~/js/Books/BookChoices.js"></script>
 
     <script>
         const id = '@Model.Id';
