--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -147,6 +147,8 @@
 
     <script src="~/js/Books/BookChoices.js"></script>
 
+    <script src="~/js/Books/Book.js"></script>
+
     <script>
         const id = '@Model.Id';
         const userAction = '@userAction';
