--- a/src/Presentation/Views/Checkouts/Checkout.cshtml
+++ b/src/Presentation/Views/Checkouts/Checkout.cshtml
@@ -98,14 +98,14 @@
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label asp-for="ReturnedCopiesCount" class="form-label"></label>
-                                <input asp-for="ReturnedCopiesCount" class="form-control" readonly="@isCheckoutClosed" />
+                                <input asp-for="ReturnedCopiesCount" class="form-control"  />
                                 <span asp-validation-for="ReturnedCopiesCount" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label asp-for="LostCopiesCount" class="form-label"></label>
-                                <input asp-for="LostCopiesCount" class="form-control" readonly="@isCheckoutClosed" />
+                                <input asp-for="LostCopiesCount" class="form-control" />
                                 <span asp-validation-for="LostCopiesCount" class="text-danger"></span>
                             </div>
                         </div>
@@ -115,14 +115,14 @@
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label asp-for="DamagedCopiesCount" class="form-label"></label>
-                                <input asp-for="DamagedCopiesCount" class="form-control" readonly="@isCheckoutClosed" />
+                                <input asp-for="DamagedCopiesCount" class="form-control"  />
                                 <span asp-validation-for="DamagedCopiesCount" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label asp-for="DestroyedCopiesCount" class="form-label"></label>
-                                <input asp-for="DestroyedCopiesCount" class="form-control" readonly="@isCheckoutClosed" />
+                                <input asp-for="DestroyedCopiesCount" class="form-control"  />
                                 <span asp-validation-for="DestroyedCopiesCount" class="text-danger"></span>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
 
                     <div class="d-flex align-items-end justify-content-end myfab-container">
                         <div class="d-flex flex-column">
-                            <button type="submit" class="btn btn-primary myfab mb-2">Close Checkout</button>
+                            <button type="submit" class="btn btn-primary myfab mb-2">@(isCheckoutClosed ? "Reclose Checkout" : "Close Checkout")</button>
                             <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
                         </div>
                     </div>
