added capability of storing and seeing audit of book edition, now adding audit info when changes occur needs to be done

--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -111,3 +111,7 @@
         const viewName = "Authors";
     </script>
 }
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/Books/Authors/Authors.css" asp-append-version="true" />
+}
