improved way of changing count of books, so its more straightforward

--- a/src/Presentation/Views/Rooms/Rooms.cshtml
+++ b/src/Presentation/Views/Rooms/Rooms.cshtml
@@ -48,7 +48,7 @@
                         <span>@room.MaxCapacityOfPeople</span>
                     </div>
                     <div class="property">
-                        <span class="text-muted">Bookshelves:</span>
+                        <span class="text-muted">Editions:</span>
                         <span>@room.EditionsCount</span>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                 <th>Floor</th>
                 <th>Room Number</th>
                 <th>Max Capacity Of People</th>
-                <th>Bookshelves</th>
+                <th>Editions</th>
                 <th>Status</th>
                 <th style="width: 8%">Action</th>
             </tr>
