changed breadcrumb style.

--- a/src/Presentation/Views/BookEditions/BookEdition.cshtml
+++ b/src/Presentation/Views/BookEditions/BookEdition.cshtml
@@ -17,17 +17,17 @@
         },
         new()
         {
-            Label = bookId ?? "Book",
+            Label = "Details",
             Url = $"/Books/{bookId}"
         },
         new()
         {
-            Label = "Book Editions",
+            Label = "Editions",
             Url = $"/Books/{bookId}/BookEditions"
         },
         new()
         {
-            Label = Model.Id.ToString(),
+            Label = "Details",
             Url = $"/Books/{bookId}/BookEditions/{Model.Id}"
         }
     };
