--- a/src/Presentation/Views/BookEditions/BookEditions.cshtml
+++ b/src/Presentation/Views/BookEditions/BookEditions.cshtml
@@ -13,12 +13,12 @@
         },
         new()
         {
-            Label = bookId ?? "Book",
+            Label = "Details",
             Url = $"/Books/{bookId}"
         },
         new()
         {
-            Label = "Book Editions",
+            Label = "Editions",
             Url = $"/Books/{bookId}/BookEditions"
         }
     };
