--- a/src/Presentation/Views/Checkouts/Checkout.cshtml
+++ b/src/Presentation/Views/Checkouts/Checkout.cshtml
@@ -18,7 +18,7 @@
         },
         new()
         {
-            Label = Model.Id.ToString(),
+            Label = "Details",
             Url = $"/Checkouts/{Model.Id}"
         }
     };
