--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -14,7 +14,7 @@
         },
         new()
         {
-            Label = Model.Id.ToString(),
+            Label = "Details",
             Url = $"/Employees/{Model.Id}"
         }
     };
