--- a/src/Presentation/Views/Rooms/Room.cshtml
+++ b/src/Presentation/Views/Rooms/Room.cshtml
@@ -15,7 +15,7 @@
         },
         new()
         {
-            Label = Model.Id.ToString(),
+            Label = "Details",
             Url = $"/Rooms/{Model.Id}"
         }
     };
