--- a/src/Presentation/Views/BookEditions/AddBookEdition.cshtml
+++ b/src/Presentation/Views/BookEditions/AddBookEdition.cshtml
@@ -15,12 +15,12 @@
         },
         new()
         {
-            Label = bookId ?? "Book",
+            Label = "Details",
             Url = $"/Books/{bookId}"
         },
         new()
         {
-            Label = "Book Editions",
+            Label = "Editions",
             Url = $"/Books/{bookId}/BookEditions"
         },
         new()
