--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -15,7 +15,7 @@
         },
         new()
         {
-            Label = Model.Id.ToString(),
+            Label = "Details",
             Url = $"/Books/{Model.Id}"
         }
     };
